samples/_failures_safe/1761341898_64a55b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2524edda.c: In function ‘main’:
./samples/SAFE/__tmp_2524edda.c:163:9: error: expected declaration or statement at end of input
  163 |         }
      |         ^
./samples/SAFE/__tmp_2524edda.c:163:9: error: expected declaration or statement at end of input
